--- a/notebooks/00_dataset_overview.ipynb
+++ b/notebooks/00_dataset_overview.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 396,
    "id": "7b13ef00",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 397,
    "id": "c3319c46",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 398,
    "id": "11c6dc57",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 399,
    "id": "86fe0696",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 400,
    "id": "030f070d",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 401,
    "id": "c4ff452d",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
    "id": "1028cba6",
    "metadata": {},
    "source": [
-    "### There are a few issues with this dataset: \n",
+    "### There are a few issues with the correlation: \n",
     "Units Sold vs Demand Forecast:\n",
     "A correlation of 99.7% suggests the \"Demand Forecast\" column might actually be derived FROM the Units Sold data rather than being a true predictive forecast.\n",
     "\n",
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 402,
    "id": "0084ea2d",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 403,
    "id": "278323c6",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 404,
    "id": "6c130334",
    "metadata": {},
    "outputs": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 405,
    "id": "e8d80f3d",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 406,
    "id": "ec31f714",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 407,
    "id": "653d5658",
    "metadata": {},
    "outputs": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 408,
    "id": "bb85aca1",
    "metadata": {},
    "outputs": [
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 409,
    "id": "19d05b32",
    "metadata": {},
    "outputs": [
@@ -663,6 +663,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "95dcb0dc",
+   "metadata": {},
+   "source": [
+    "## Removing unnecessary columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 410,
+   "id": "2534fc40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(['Seasonality', 'Demand Forecast'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69b64f89",
+   "metadata": {},
+   "source": [
+    "- The faulty 'Seasonality' column has been dropped in favor of the 'Seasonality Fixed' column which properly assigns seasonality by month.\n",
+    "- The 'Demand Forecast' column has been dropped because it matches too closely with sale data and therefore would be too easy to make prediction model around."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bb010bc7",
    "metadata": {},
    "source": [
@@ -671,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 411,
    "id": "bd8d88fb",
    "metadata": {},
    "outputs": [
@@ -704,16 +731,13 @@
        "      <th>Inventory Level</th>\n",
        "      <th>Units Sold</th>\n",
        "      <th>Units Ordered</th>\n",
-       "      <th>Demand Forecast</th>\n",
        "      <th>Price</th>\n",
        "      <th>Discount</th>\n",
        "      <th>Weather Condition</th>\n",
        "      <th>Holiday/Promotion</th>\n",
        "      <th>Competitor Pricing</th>\n",
-       "      <th>Seasonality</th>\n",
        "      <th>Day of Week</th>\n",
        "      <th>Month</th>\n",
-       "      <th>Seasonality_Fixed</th>\n",
        "      <th>Seasonality Fixed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -728,16 +752,13 @@
        "      <td>231</td>\n",
        "      <td>127</td>\n",
        "      <td>55</td>\n",
-       "      <td>135.47</td>\n",
        "      <td>33.50</td>\n",
        "      <td>20</td>\n",
        "      <td>Rainy</td>\n",
        "      <td>0</td>\n",
        "      <td>29.69</td>\n",
-       "      <td>Autumn</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
-       "      <td>Winter</td>\n",
        "      <td>Winter</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -750,16 +771,13 @@
        "      <td>204</td>\n",
        "      <td>150</td>\n",
        "      <td>66</td>\n",
-       "      <td>144.04</td>\n",
        "      <td>63.01</td>\n",
        "      <td>20</td>\n",
        "      <td>Sunny</td>\n",
        "      <td>0</td>\n",
        "      <td>66.16</td>\n",
-       "      <td>Autumn</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
-       "      <td>Winter</td>\n",
        "      <td>Winter</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -772,16 +790,13 @@
        "      <td>102</td>\n",
        "      <td>65</td>\n",
        "      <td>51</td>\n",
-       "      <td>74.02</td>\n",
        "      <td>27.99</td>\n",
        "      <td>10</td>\n",
        "      <td>Sunny</td>\n",
        "      <td>1</td>\n",
        "      <td>31.32</td>\n",
-       "      <td>Summer</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
-       "      <td>Winter</td>\n",
        "      <td>Winter</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -794,16 +809,13 @@
        "      <td>469</td>\n",
        "      <td>61</td>\n",
        "      <td>164</td>\n",
-       "      <td>62.18</td>\n",
        "      <td>32.72</td>\n",
        "      <td>10</td>\n",
        "      <td>Cloudy</td>\n",
        "      <td>1</td>\n",
        "      <td>34.74</td>\n",
-       "      <td>Autumn</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
-       "      <td>Winter</td>\n",
        "      <td>Winter</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -816,16 +828,13 @@
        "      <td>166</td>\n",
        "      <td>14</td>\n",
        "      <td>135</td>\n",
-       "      <td>9.26</td>\n",
        "      <td>73.64</td>\n",
        "      <td>0</td>\n",
        "      <td>Sunny</td>\n",
        "      <td>0</td>\n",
        "      <td>68.95</td>\n",
-       "      <td>Summer</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>January</td>\n",
-       "      <td>Winter</td>\n",
        "      <td>Winter</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -840,35 +849,52 @@
        "3 2022-01-01     S001      P0004         Toys  North              469   \n",
        "4 2022-01-01     S001      P0005  Electronics   East              166   \n",
        "\n",
-       "   Units Sold  Units Ordered  Demand Forecast  Price  Discount  \\\n",
-       "0         127             55           135.47  33.50        20   \n",
-       "1         150             66           144.04  63.01        20   \n",
-       "2          65             51            74.02  27.99        10   \n",
-       "3          61            164            62.18  32.72        10   \n",
-       "4          14            135             9.26  73.64         0   \n",
+       "   Units Sold  Units Ordered  Price  Discount Weather Condition  \\\n",
+       "0         127             55  33.50        20             Rainy   \n",
+       "1         150             66  63.01        20             Sunny   \n",
+       "2          65             51  27.99        10             Sunny   \n",
+       "3          61            164  32.72        10            Cloudy   \n",
+       "4          14            135  73.64         0             Sunny   \n",
        "\n",
-       "  Weather Condition  Holiday/Promotion  Competitor Pricing Seasonality  \\\n",
-       "0             Rainy                  0               29.69      Autumn   \n",
-       "1             Sunny                  0               66.16      Autumn   \n",
-       "2             Sunny                  1               31.32      Summer   \n",
-       "3            Cloudy                  1               34.74      Autumn   \n",
-       "4             Sunny                  0               68.95      Summer   \n",
+       "   Holiday/Promotion  Competitor Pricing Day of Week    Month  \\\n",
+       "0                  0               29.69    Saturday  January   \n",
+       "1                  0               66.16    Saturday  January   \n",
+       "2                  1               31.32    Saturday  January   \n",
+       "3                  1               34.74    Saturday  January   \n",
+       "4                  0               68.95    Saturday  January   \n",
        "\n",
-       "  Day of Week    Month Seasonality_Fixed Seasonality Fixed  \n",
-       "0    Saturday  January            Winter            Winter  \n",
-       "1    Saturday  January            Winter            Winter  \n",
-       "2    Saturday  January            Winter            Winter  \n",
-       "3    Saturday  January            Winter            Winter  \n",
-       "4    Saturday  January            Winter            Winter  "
+       "  Seasonality Fixed  \n",
+       "0            Winter  \n",
+       "1            Winter  \n",
+       "2            Winter  \n",
+       "3            Winter  \n",
+       "4            Winter  "
       ]
      },
-     "execution_count": 333,
+     "execution_count": 411,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b20ac4f2",
+   "metadata": {},
+   "source": [
+    "## What This Means Overall\n",
+    "There are logical inconsistencies in this synthetic dataset because it is generated to demonstrate technical concepts rather than perfect business realism.\n",
+    "This is still OK because:\n",
+    "- The seasonality issue has been fixed\n",
+    "- The time series patterns and external factors (weather, promotions) still provide predictive opportunities\n",
+    "- The core forecasting techniques will still be valuable\n",
+    "- Synthetic data often has these kinds of limitations\n",
+    "\n",
+    "### Key Adjustment:\n",
+    "-Focus on lag features, weather impacts, and promotional effects instead of demand forecasting"
    ]
   }
  ],
